Shift click to create overrides on objects not working #100476

Closed
opened 2022-08-18 09:37:38 +02:00 by Steffen Dünner · 10 comments

System Information
Operating system: Linux-5.15.0-46-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-18 05:55, hash: 0aaff9a07d
Worked: (newest version of Blender that worked as expected)

Short description of error
Two days ago there was a commit ( 8aa094263b ) to fix the creation of overrides on modifiers by shift clicking on the “chain” icon.
This is working (again) now, but I noticed that the shift click workflow to override linked data blocks isn’t working with e.g. objects, at least not how the popover promises.

Example:
A simple scene where I link a simple cube from another blend file:

image.png

If I hover over the chain icon it says “…Shift + Click to create a library override”. Awesome, but If I shift click it nothing happens.

If I instead right-click on the object in the Outliner and use “Library Overrides > Make > Selected” it works and does exactly what I would expect from shift clicking the icon.
Is this an oversight?

Exact steps for others to reproduce the error

  • Download these both blend files and put them in the same directory
    LIB_Cube_v01.blend
    Cubescene_v01.blend

  • Open the "Cubescene_v01.blend"
    It's a scene with a simple cube linked in

  • Select the cube in the Outliner and go to the Object panel

  • Shift click the chain icon -> Nothing happens

  • Right click the cube in the Outliner and use “Library Overrides > Make > Selected”

  • At first only the icon in the Outliner refreshes to the chain with an arrow

  • If you hover with your mouse of the Properties panel it also refreshes and shows the chain / arrow icon

  • The override is working like expected

@mont29 is this something for you? I also noticed that the tool tips on the new override right click menus are a bit wonky (Pablo also mentioned this in the latest "Blender.Today" show ;) ).

**System Information** Operating system: Linux-5.15.0-46-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-08-18 05:55, hash: `0aaff9a07d` Worked: (newest version of Blender that worked as expected) **Short description of error** Two days ago there was a commit ( 8aa094263b ) to fix the creation of overrides on modifiers by shift clicking on the “chain” icon. This is working (again) now, but I noticed that the shift click workflow to override linked data blocks isn’t working with e.g. objects, at least not how the popover promises. Example: A simple scene where I link a simple cube from another blend file: ![image.png](https://archive.blender.org/developer/F13399579/image.png) If I hover over the chain icon it says “…Shift + Click to create a library override”. Awesome, but If I shift click it nothing happens. If I instead right-click on the object in the Outliner and use “Library Overrides > Make > Selected” it works and does exactly what I would expect from shift clicking the icon. Is this an oversight? **Exact steps for others to reproduce the error** - Download these both blend files and put them in the same directory [LIB_Cube_v01.blend](https://archive.blender.org/developer/F13399598/LIB_Cube_v01.blend) [Cubescene_v01.blend](https://archive.blender.org/developer/F13399599/Cubescene_v01.blend) - Open the "Cubescene_v01.blend" It's a scene with a simple cube linked in - Select the cube in the Outliner and go to the Object panel - Shift click the chain icon -> Nothing happens - Right click the cube in the Outliner and use “Library Overrides > Make > Selected” - At first only the icon in the Outliner refreshes to the chain with an arrow - If you hover with your mouse of the Properties panel it also refreshes and shows the chain / arrow icon - > The override is working like expected @mont29 is this something for you? I also noticed that the tool tips on the new override right click menus are a bit wonky (Pablo also mentioned this in the latest "Blender.Today" show ;) ).

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscriber: @mont29

Added subscriber: @mont29
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

It should be noted that this prints:

template_id_liboverride_hierarchy_create: The data-block OBCube could not be overridden

So it executes as expected, just doesn't work.

It should be noted that this prints: ``` template_id_liboverride_hierarchy_create: The data-block OBCube could not be overridden ``` So it executes as expected, just doesn't work.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Wondering if we should use the reports system in such cases to have any kind of UI feedback?

Wondering if we should use the reports system in such cases to have any kind of UI feedback?

So, couldn't clicking the chain icon just invoke the same command as the right click menu?

So, couldn't clicking the chain icon just invoke the same command as the right click menu?

This issue was referenced by c375750423

This issue was referenced by c3757504233ab7b1dca7102bb9239423d6419efc

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-08-18 12:27:27 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100476
No description provided.